2014-12-06  Smacky

	* Always be explicit about $INSTALLSUFFIX to prevent uninstall
	  disasters.
	* Improve validation of installation directory.

2014-12-04  Smacky

	* Initial release.